--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<nav class="navbar sticky-top navbar-expand-lg">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Covid-19 Analysis</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,9 +54,6 @@
  body {
         background: #0d1117;
  }
-.navbar{
-background: #010915;
-}
 
 </style>
 </html>
